@@ -5,9 +5,6 @@ Spring Integration 2.1 added support for the https://www.jcp.org/en/jsr/detail?i
 It lets you use scripts written in any supported language (including Ruby, JRuby, Groovy and Kotlin) to provide the logic for various integration components, similar to the way the Spring Expression Language (SpEL) is used in Spring Integration.
 For more information about JSR223, see the https://docs.oracle.com/javase/8/docs/technotes/guides/scripting/prog_guide/api.html[documentation].
 
-NOTE: Starting with Java 11, the Nashorn JavaScript Engine has been deprecated with possible removal in Java 15.
-It is recommended to reconsider it in favor of other scripting language from now on.
-
 You need to include this dependency into your project:
 
 ====
@@ -31,7 +28,6 @@ In addition, you need to add a script engine implementation, e.g. JRuby, Jython.
 
 Starting with version 5.2, Spring Integration provides a Kotlin Jsr223 support.
 You need to add these dependencies into your project to make it working:
-
 
 ====
 [source, xml, subs="normal", role="primary"]
@@ -279,3 +275,24 @@ If a `script-variable-generator` is not provided, script components use `Default
 
 IMPORTANT: You cannot provide both the `script-variable-generator` attribute and `<variable>` element(s).
 They are mutually exclusive.
+
+[[graalmv-polyglot]]
+===== GraalVM Polyglot
+
+Starting with version 6.0, the framework provides a `PolyglotScriptExecutor` which is based the https://www.graalvm.org/22.2/reference-manual/embed-languages[GraalVM Polyglot API].
+The JSR223 engine implementation for JavaScript, removed from Java by itself, has been replaced by using this new script executor.
+See more information about enabling JavaScript support in GraalVM and what https://www.graalvm.org/22.2/reference-manual/js[configuration options] can be propagated via script variables.
+By default, the framework sets `allowAllAccess` to `true` on the shared Polyglot `Context` which enables this interaction with host JVM:
+
+* The creation and use of new threads.
+* The access to public host classes.
+* The loading of new host classes by adding entries to the class path.
+* Exporting new members into the polyglot bindings.
+* Unrestricted IO operations on host system.
+* Passing experimental options.
+* The creation and use of new sub-processes.
+* The access to process environment variables.
+
+This can be customized via overloaded `PolyglotScriptExecutor` constructor which accepts a `org.graalvm.polyglot.Context.Builder`.
+
+The usage of JavaScript in the framework components remains the same, on ly the difference that now it is going to work only on GraalVM with installed `js` component.
